@@ -155,6 +155,35 @@ subtest 'Parameters' => sub {
   is $res->json->{bar},    'baz', 'right value';
 };
 
+subtest 'Binding' => sub {
+  my @server;
+  app->hook(
+    before_server_start => sub {
+      my ($server, $app) = @_;
+      push @server, ref $server, $app->mode;
+    }
+  );
+
+  my $msg = '';
+  local *STDOUT;
+  open STDOUT, '>', \$msg;
+  local %ENV = (
+    PATH_INFO       => '/',
+    REQUEST_METHOD  => 'GET',
+    SCRIPT_NAME     => '/',
+    HTTP_HOST       => 'localhost:8080',
+    SERVER_PROTOCOL => 'HTTP/1.0'
+  );
+  is(Mojolicious::Command::cgi->new(app => app)->run, 200, 'right status');
+  my $res = Mojo::Message::Response->new->parse("HTTP/1.1 200 OK\x0d\x0a$msg");
+  is $res->code, 200, 'right status';
+  is $res->headers->status,         '200 OK',                  'right "Status" value';
+  is $res->headers->content_length, 21,                        'right "Content-Length" value';
+  is $res->headers->content_type,   'text/html;charset=UTF-8', 'right "Content-Type" value';
+  is $res->body, 'Your Mojo is working!', 'right content';
+  is_deeply \@server, ['Mojo::Server::CGI', 'development'], 'hook has been emitted once';
+};
+
 subtest 'Reverse proxy' => sub {
   my $msg = '';
   local *STDOUT;
